# virtual-queue-python-sdk

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  release.yaml
examples/: README.md
examples/basic/: verify-token.py
examples/flask/: README.md  app.py  requirements.txt
src/virtualqueue_sdk/: __main__.py  config.py  config.toml  queues.py
src/vqueue/: __init__.py  config.toml  queues.py
tests/: test_queues.py
