[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "virtualqueue_sdk"
version = "1.0.0"
description = "A toolset for Virtual Queue integrations in Python"
readme = "README.md"
authors = [{ name = "Animus Coop.", email = "info@animus.com.ar" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["tickets", "queue", "async", "events", "high-demand"]
dependencies = [
    "requests",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/animus-coop/virtual-queue-python-sdk"

[project.scripts]
virtualqueue = "virtualqueue_sdk.__main__:main"