[project]
name = "virtualqueue_sdk"
version = "1.0.0"
description = "A toolset for Virtual Queue integrations in Python"
readme = "README.md"
authors = [{ name = "Animus Coop.", email = "info@animus.com.ar" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["tickets", "queue", "async", "events", "high-demand"]
dependencies = [
    "requests",
    'tomli; python_version < "3.11"',
]
requires-python = ">=3.10"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 127

[tool.ruff.lint]
extend-select = [
	# Pycodestyle Errors and Warnings
	"E",
	"W",
	# Flake8-bugbear
	"B",
	# Pyflakes
	"F",
	# isort
	"I",
]
unfixable = ["B"]

[project.urls]
Homepage = "https://github.com/animus-coop/virtual-queue-python-sdk"

[project.scripts]
virtualqueue = "virtualqueue_sdk.__main__:main"
